feat(audits): make audit items a real count sheet
audit_item existed in the schema and as an orphaned entity, but nothing
ever wrote to it: no way to generate the sheet, no way to record that an
asset had been sighted, no way to say what was wrong with one. The web
client meanwhile showed a "Verified" seal backed by nothing at all.

V57 gives audit_item an organisation, a status, a discrepancy type and
reason, who verified it and when, and the usual soft-delete/audit columns.
Existing rows inherit their audit's organisation and read their status from
the discrepancy flag they already carry; rows that predate audit_id keep no
organisation and are therefore invisible to every tenant, which is the safe
outcome for data nobody can prove the owner of.

Starting an audit generates one item per in-scope asset (the audit's
department, or the whole organisation; disposed assets left out, since
their absence is not a finding). POST .../items/generate tops the sheet up
idempotently. Verification takes whatever came off the label and runs it
through AssetQrCodes.parse, falling back to an asset-tag lookup, so the
scanner and the search box share one endpoint. Scanning an asset that is
not on the sheet is recorded as an UNEXPECTED discrepancy rather than
silently verified — otherwise an out-of-scope asset could close an audit.

The audit DTO now carries total/verified/discrepancy counts, computed in
one grouped query rather than three per audit, and allItemsVerified, which
is true only when the sheet exists and every item on it is verified. That
is what the seal is allowed to key off.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>